@@ -19,6 +19,7 @@ _arguments -s -C \
 	   '(-f --force)'{-f,--force}'[Force an upgrade (ignore version).]' \
 	   '(-z --force-reqs)'{-z,--force-reqs}'[Force update of requirements.]' \
 	   '(-i --noinstall)'{-i,--noinstall}'[Build package but do not install.]' \
+	   '(-S --strict-versions)'{-S,--strict-versions}'[If TRUE, then only perform non-override upgrades if the version or build number is greater.]:strict versions?:((TRUE\:"Strict upgrades only." FALSE\:"Upgrade on differing version and build number."))' \
 	   '(-)*:SlackBuild:(${sboupdates:|words})' \
     && return 0
 
