@@ -65,6 +65,11 @@
 
 #SLACKWARE_VERSION=FALSE
 
+# STRICT_VERSIONS - if TRUE, attempt to upgrade only if the available version
+# or build number is higher. This has no effect on local override scripts.
+
+#STRICT_VERSIONS=FALSE
+
 # REPO - if set to a URL, use this as the SBo repository. Git and rsync
 # repositories only.
 
