@@ -14,7 +14,7 @@
 use 5.16.0;
 use strict;
 use warnings FATAL => 'all';
-use SBO::Lib qw/ update_tree get_available_updates get_removed_builds script_error open_fh is_local show_version get_local_outdated_versions $slackbuilds_txt slackbuilds_or_fetch verify_gpg lint_sbo_config wrapsay %config /;
+use SBO::Lib qw/ update_tree build_cmp get_available_updates get_removed_builds script_error open_fh is_local show_version get_local_outdated_versions $slackbuilds_txt slackbuilds_or_fetch verify_gpg lint_sbo_config version_cmp wrapsay %config /;
 use Getopt::Long;
 use File::Basename;
 use List::Util 'max';
@@ -91,7 +91,15 @@ sub get_update_list {
 		else { print "Checking for updated SlackBuilds...\n"; }
 	}
 	if ($filter eq 'BUILD') { print "Checking for bumped SlackBuilds..."; }
-	my @updates = @{ get_available_updates($filter) };
+	my @updates;
+	# if STRICT_VERSIONS is true, apparent downgrades must still be reported, just with different formatting
+	if ($config{STRICT_VERSIONS} eq 'TRUE') {
+		$config{STRICT_VERSIONS} = 'FALSE';
+		@updates = @{ get_available_updates($filter) };
+		$config{STRICT_VERSIONS} = 'TRUE';
+	} else {
+		@updates = @{ get_available_updates($filter) };
+	}
 	my @outdated = get_local_outdated_versions($filter);
 	return() unless @outdated + @updates;
 
@@ -103,6 +111,9 @@ sub get_update_list {
 			local => is_local($update->{name})
 		};
 		if ($filter eq 'BUILD') { $updates{$update->{name}}{available} = $update->{bump}; }
+		if ($filter eq 'BUILD') { $updates{$update->{name}}{build} = $update->{build}; }
+		if ($filter eq 'VERS' and $config{STRICT_VERSIONS} eq 'TRUE') { $updates{$update->{name}}{differs_only} = 1 unless version_cmp($updates{$update->{name}}{available}, $updates{$update->{name}}{installed}) > 0; }
+		if ($filter eq 'BUILD' and $config{STRICT_VERSIONS} eq 'TRUE') { $updates{$update->{name}}{differs_only} = 1 unless build_cmp($updates{$update->{name}}{available}, $update->{build}, 1, 1) > 0; }
 	}
 	for my $update (@outdated) {
 		my $name = $update->{name};
@@ -111,6 +122,7 @@ sub get_update_list {
 		$updates{$name}{local} = 1;
 		if ($filter eq 'BUILD') {
 			$updates{$update->{name}}{available} = $update->{bump};
+			$updates{$name}{build} = $update->{build};
 			$updates{$update->{name}}{sbo} = $update->{intree};
 		}
 	}
@@ -119,21 +131,34 @@ sub get_update_list {
 # sboname 1.0  <  needs updating (1.1 from overrides)
 # sboname 1.0  <  needs updating (1.1 from SBo)
 # sboname 1.0  <  needs updating (1.1 from overrides, 1.2 from SBo)
+# sboname 1.0 (1)  <  was bumped (build 2 from overrides)
+# sboname 1.0 (1)  <  was bumped (build 2 from SBo)
+# sboname 1.0 (2)  <  differs (build 1 from SBo) # (note: for STRICT_VERSIONS)
+# sboname 1.1  <  version differs (1.0 from SBo) # (note: for STRICT_VERSIONS)
 # sboname 1.0  <  override differs (1.1 from SBo)
 
 	my $max = 0;
 	foreach my $sbo (keys %updates) {
 		my $info = $updates{$sbo};
-		my $current = sprintf "%s %s", $sbo, $info->{installed};
+		my $current;
+		if ($filter eq 'BUILD') {
+			$current = sprintf "%s %s (%s)", $sbo, $info->{installed}, $info->{build};
+		}
+		else {
+			$current = sprintf "%s %s", $sbo, $info->{installed};
+		}
 
 		# Packages from LOCAL_OVERRIDES only have build number differences with the overrides directory reported
 		my $available = '';
-		if (defined $info->{available} and defined $info->{sbo} and $filter ne 'BUILD') {
+		if (defined $info->{available} and defined $info->{sbo} and $filter ne 'BUILD' and not defined $info->{differs_only}) {
 			if ($filter eq 'VERS') { $available = sprintf "needs updating (%s from overrides, %s from SBo)", $info->{available}, $info->{sbo}; }
-		}
-		elsif ($info->{available}) {
-			if ($filter eq 'VERS') { $available = sprintf "needs updating (%s from %s)", $info->{available}, $info->{local} ? "overrides" : "SBo"; }
-			if ($filter eq 'BUILD') { $available = sprintf "was bumped (build %s from %s)", $info->{available}, $info->{local} ? "overrides" : "SBo"; }
+		} elsif ($info->{available}) {
+			if ($filter eq 'VERS' and $info->{local}) { $available = sprintf "needs updating (%s from overrides)", $info->{available}; }
+			elsif ($filter eq 'VERS' and not defined $info->{differs_only}) { $available = sprintf "needs updating (%s from SBo)", $info->{available}; }
+			elsif ($filter eq 'VERS' and not $info->{local} and defined $info->{differs_only}) { $available = sprintf "version differs (%s from SBo)", $info->{available}; }
+			if ($filter eq 'BUILD' and not defined $info->{differs_only}) { $available = sprintf "was bumped (build %s from %s)", $info->{available}, $info->{local} ? "overrides" : "SBo"; }
+			if ($filter eq 'BUILD' and defined $info->{differs_only} and not $info->{local}) { $available = sprintf "differs (build %s from SBo)", $info->{available}; }
+			if ($filter eq 'BUILD' and defined $info->{differs_only} and $info->{local}) { $available = sprintf "was bumped (build %s from overrides)", $info->{available}; }
 		}
 		else {
 			if ($filter eq 'VERS') { $available = sprintf "override differs (%s from SBo)", $info->{sbo}; }
